paiji2_forum/static/forum/style.css
.forum-action {
    font-size: 14px;
}

.forum-icon-selector input[type="radio"]:checked + label {
    background-color: #DBFFEB;
    border: 3px solid #FF8400;
    border-radius: 0.8em;
    padding: 0.5em;
}

.forum-icon-selector label {
    display: inline-block;
}

.forum-message-title {
    font-size: 1.11em;
    color: #000;
    font-weight: bold;
}

//a.forum-message-title:visited {
//    color: #000;
//}

a.forum-message-title:hover {
    color: #FFF;
}

.forum-text {
    margin-bottom: 0px;
    background-color: #FAFAFA;
}

#forum-question-text {
    background-color: #FFE3F4;
}

#forum-message-text {
    background-color: #DBFFEB;
}

.topic-entry {
    margin-top: 1em;
}

.navbar-forum-message {
    font-size: 10pt;
    margin: 0px 0px;
    padding: 0px 0px;
    background-color: #DBFFEB;
}

.nav-forum-message {
    margin-top: 0px; 
}

.nav-forum-message li a {
    padding: 0px 0px;
    color: #072;
}

.nav-forum-message li.disabled a {
    padding: 0px 0px;
    color: #FFF;
}

ul.topic {
    list-style-type: none;
    padding: 0.5em;
    margin: 0.5em;
    // border-bottom-style: dashed;
    // border-bottom-color: #DBFFEB;
    // border-bottom-width: 0.2em;
}

ul.answers {
    list-style-type: none;
    padding: 0em;
    margin: 0.2em;
}


ul.answers li.rborder {
    border-left-style: dotted;
    border-left-color: #0FFF7A;
    border-left-width: 0.2em;
    padding-left: 1em;
}

